# StarFish_agent_try

./: .gitignore  README.md  main.py  pyproject.toml
agent/: core.py  llm.py  tool_manager.py
config/: .env.example  settings.py
skills/: __init__.py  base.py  cat_persona.py  developer_mode.py  file_skill.py  file_skill_loader.py  json_tool_calling.py  llm_tuning.py  skill_manager.py
skills/definitions/: cat_persona.skill.md  critical_path.skill.md  developer_mode.skill.md  example_tuning.skill.md  test_mode.skill.md  tool_policy.skill.md  weather.skill.md
skills/definitions/personas/: cat_persona.skill.md  coach_persona.skill.md  engineer_persona.skill.md  librarian_persona.skill.md
tools/: base.py  calculator.py  critical_path.py  current_time.py  parse_schedule.py  weather.py
ui/: chat_fastapi_server.py  chat_server.py  chat_tk.py  chat_ui.css  chat_ui.html  chat_ui.js
