[project]
name = "starfish-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.33.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
]
